[tool.poetry]
name = "mash-controller-python"
version = "0.1.0"
description = "Backend for controlling mash equipment"
authors = ["Peter Möller <peter@pull-up.se>"]
license = "CC0 1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"
pre-commit = "^4.0.1"
pydantic = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
